--- a/access_pass/templates/access_forms.html
+++ b/access_pass/templates/access_forms.html
@@ -11,7 +11,7 @@
 {% block content %}
 <div class="container" style="margin-top: 90px; min-height: 80vh; max-width: 70%;">
     <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
-    <form action="" method="post">{% csrf_token %}
+    <form  class="row" action="" method="post">{% csrf_token %}
         <table>
             {{ wizard.management_form }}
             {% if wizard.form.forms %}
@@ -23,11 +23,16 @@
             {{ wizard.form | crispy }}
             {% endif %}
         </table>
-        {% if wizard.steps.prev %}
-        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">first step</button>
-        <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">prev step</button>
-        {% endif %}
-        <input type="submit" value="{% translate " submit" %}" />
+        <div class="container-fluid">
+            <div class="d-flex justify-content-around min-w-100 p-3">
+                {% if wizard.steps.prev %}
+
+                <button class="btn btn-info col-3" name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">first step</button>
+                <button class="btn btn-info col-3" name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">prev step</button>
+                {% endif %}
+                <button class="btn btn-success col-3" type="submit">Next</button>
+            </div>
+        </div>
     </form>
 </div>
 {% endblock %}
