--- a/access_pass/templates/access_forms.html
+++ b/access_pass/templates/access_forms.html
@@ -11,8 +11,59 @@
 {% block content %}
 <div class="container" style="margin-top: 90px; min-height: 80vh; max-width: 70%;">
     <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
-    <form  class="row" action="" method="post">{% csrf_token %}
-        <table>
+    <form method="post">{% csrf_token %}
+        {{wizard.management_form}}
+        {{ wizard.form.non_field_errors }}
+
+        <div class="row">
+            <div class="col-6">
+                {{wizard.form.full_name.errors}}
+                {{wizard.form.full_name|as_crispy_field}}
+            </div>
+            <div class="col-6">
+                {{wizard.form.id_staff_number.errors}}
+                {{wizard.form.id_staff_number|as_crispy_field}}
+            </div>
+            <div class="col-6">
+                {{wizard.form.mobile_number.errors}}
+                {{wizard.form.mobile_number|as_crispy_field}}
+            </div>
+            <div class="col-6">
+                {{wizard.form.email_address.errors}}
+                {{wizard.form.email_address|as_crispy_field}}
+            </div>
+            <div class="col-12">
+                {{wizard.form.organization_department.errors}}
+                {{wizard.form.organization_department|as_crispy_field}}
+            </div>
+            <div class="col-6">
+                {{wizard.form.date_of_visit.errors}}
+                {{wizard.form.date_of_visit|as_crispy_field}}
+            </div>
+            <div class="col-6">
+                {{wizard.form.time_of_visit.errors}}
+                {{wizard.form.time_of_visit|as_crispy_field}}
+            </div>
+            <div class="col-12">
+                {{wizard.form.priority_level.errors}}
+                {{wizard.form.priority_level|as_crispy_field}}
+            </div>
+            <div class="col-12">
+                {{wizard.form.reason_for_visit.errors}}
+                {{wizard.form.reason_for_visit|as_crispy_field}}
+            </div>
+            <div class="col-12">
+                {{wizard.form.nature_of_work.errors}}
+                {{wizard.form.nature_of_work|as_crispy_field}}
+            </div>
+            <div class="col-12">
+                {{wizard.form.action_required_status.errors}}
+                {{wizard.form.action_required_status|as_crispy_field}}
+            </div>
+
+        </div>
+
+        <!-- <table>
             {{ wizard.management_form }}
             {% if wizard.form.forms %}
             {{ wizard.form.management_form }}
@@ -22,13 +73,15 @@
             {% else %}
             {{ wizard.form | crispy }}
             {% endif %}
-        </table>
+        </table> -->
         <div class="container-fluid">
             <div class="d-flex justify-content-around min-w-100 p-3">
                 {% if wizard.steps.prev %}
 
-                <button class="btn btn-info col-3" name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">first step</button>
-                <button class="btn btn-info col-3" name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">prev step</button>
+                <!-- <button class="btn btn-info col-3" name="wizard_goto_step" type="submit"
+                    value="{{ wizard.steps.first }}">first step</button> -->
+                <button class="btn btn-info col-3" name="wizard_goto_step" type="submit"
+                    value="{{ wizard.steps.prev }}">prev step</button>
                 {% endif %}
                 <button class="btn btn-success col-3" type="submit">Next</button>
             </div>
