--- a/access_pass/templates/dc_rules.html
+++ b/access_pass/templates/dc_rules.html
@@ -58,9 +58,9 @@
             <div class="container-fluid">
                 <div class="row justify-content-center">
 
-                    <div class="col-4">
+                    <!-- <div class="col-4">
                         <a href="/" class="btn btn-danger btn-lg btn-block">Disagree</a>
-                    </div>
+                    </div> -->
 
                     <div class="col-4">
                         <button type="submit" class="btn btn-primary btn-lg btn-block">Agree</button>
