--- a/access_pass/templates/sign_nda.html
+++ b/access_pass/templates/sign_nda.html
@@ -29,7 +29,7 @@
 
 				<h5>INFORMATION CONFIDENTIALITY AGREEMENT</h5>
 				<p>
-					This Non-Disclosure Agreement (NDA) is made this {{ value | date:"D d M Y" }}
+					This Non-Disclosure Agreement (NDA) is made this {% now "jS F Y H:i" %}
 				</p>
 
 				<p>BETWEEN</p>
@@ -273,7 +273,7 @@
 
 			</div>
 			<div class="container-fluid">
-				<div class="row justify-content-center">
+				<div class="row justify-content-around p-3">
 					<div class="col-4">
 						<a href="/" class="btn btn-danger btn-lg btn-block">Disagree</a>
 					</div>
